<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Edit2014Sales</string>
    <string name="hello_world">Hello world!</string>
    <string name="textProbniDodaj">Probni Element Dodaj!</string>
    <string name="textProbniLista">Probni Element Lista!</string>
    <string name="textProbniKasa">Probni Element Kasa!</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="barkod">Barcode:</string>
    <string name="naziv">Naziv:</string>
    <string name="cijena">Cijena:</string>
	<string name="opis">Opis:</string>
    <string name="btn_dodaj">Dodaj:</string>
    <string name="KM"> KM</string>
    
    
    <string name="qa_map">Map</string>
    <string name="qa_info">Info</string>
    <string name="qa_feedback">Feedback</string>
    <string name="qa_wiki">Wiki</string>
    <string name="qa_delete">Delete</string>
    
    <string name="qa_more_info">More Info</string>
    
</resources>
